[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.1.0"]

[tool]

    [tool.poetry]
    authors = ["Alex Blount <axblount@email.arizona.edu>"]
    description = "Database stuff"
    name = "dbstuff"
    version = "0.1.0-alpha"
    license = "AGPL-3.0-only"
    readme = "README.md"
    classifiers = [
        "Development Status :: 1 - Planning",
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
        "Operating System :: POSIX",
        "Operating System :: Microsoft :: Windows",
        "Programming Language :: Python :: 3.9",
        "Topic :: Database",
        "Topic :: Database :: Database Engines/Servers"
    ]

        [tool.poetry.dependencies]
        python = "^3.9"

        [tool.poetry.dev-dependencies]
        black = ">=20.11b1"
        flake8 = ">=4.0.1"
        pytest = ">=6.1.2"
        rope = ">=0.18.0"

    [tool.black]
    line-length = 80
    target-version = ["py38"]
    include = '\.pyi?$'
    exclude = '''
        /(
            \.eggs          # exclude a few common directories in the
            | \.git         # root of the project
            | \.mypy_cache
            | _build
            | buck-out
            | build
            | dist
        )/
        '''

        [tool.pytest.ini_options]
    testpaths = ["tests"]
    addopts = "--doctest-modules"
